@@ -1,3 +1,4 @@
+Added UI for Earth System button
 Switched to 4 modes: SP, SPM, PM, Ps
 Fixed: Location of "x planet mass" seems inconsistent, sometimes above and sometimes below.
 Fixed: Hard to see where "20 planet masses" text overlaps sun body.
